--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Rory Gianni
-email: hello@rorygianni.me.uk
+email: hello@rgianni.cc
 description: > # this means to ignore newlines until "baseurl:"
   Tech: creative, civic, and cleanweb. 
   By digitalWestie [rory gianni].
